[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kizuna"
version = "0.1.0"
description = "Secure peer-to-peer communication library for device discovery, file transfer, and media streaming"
readme = "bindings/python/README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
keywords = ["p2p", "peer-to-peer", "file-transfer", "streaming", "discovery", "networking"]
authors = [
    { name = "Kizuna Contributors" }
]
maintainers = [
    { name = "Kizuna Contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: Communications :: File Sharing",
]

[project.urls]
Homepage = "https://github.com/kizuna/kizuna"
Documentation = "https://kizuna.dev/docs"
Repository = "https://github.com/kizuna/kizuna"
Issues = "https://github.com/kizuna/kizuna/issues"
Changelog = "https://github.com/kizuna/kizuna/blob/main/CHANGELOG.md"

[tool.maturin]
features = ["python"]
python-source = "bindings/python"
module-name = "kizuna"
bindings = "pyo3"
compatibility = "linux"
strip = true

# Include type stubs and documentation
include = [
    "bindings/python/kizuna.pyi",
    "bindings/python/README.md",
    "bindings/python/examples/*.py"
]

[tool.maturin.target.x86_64-unknown-linux-gnu]
compatibility = "manylinux2014"

[tool.maturin.target.aarch64-unknown-linux-gnu]
compatibility = "manylinux2014"

[tool.maturin.target.x86_64-apple-darwin]
compatibility = "macosx-10-12"

[tool.maturin.target.aarch64-apple-darwin]
compatibility = "macosx-11-0"

[tool.maturin.target.x86_64-pc-windows-msvc]
compatibility = "windows"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "black>=23.0",
    "isort>=5.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests/python",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
